<resources>
    <string name="app_name">Cube26</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_base">BaseActivity</string>

    <!-- Query Paramters -->
    <string name="string_paramter_type">json</string>
    <string name="sting_paramter_payment_list">list_gateway</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="text_retry">Retry</string>
    <string name="text_no_internet">It seems that your internet is not working.</string>
    <string name="text_default_error">Some error occurred. Please try again!</string>

    <!-- Menu String -->
    <string name="action_sort_rating">Sort by Ratings</string>
    <string name="action_sort_setup_fee">Sort by Setup Fee</string>
    <string name="action_sort_favourites">Sort by favourites</string>
    <string name="title_activity_payment_details">PaymentDetailsActivity</string>

    <string name="string_ratings">Ratings</string>
    <string name="string_setup_fee">Setup Fee</string>
    <string name="string_supported_currency">Supported Currency</string>
    <string name="string_transaction_fee">Transaction Fee</string>
    <string name="string_description">Description</string>
    <string name="string_document">Document</string>
    <string name="text_no_favourites">Sorry! You have no favourites saved.</string>

</resources>
